--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@ before_script:
   - go get ./...
   - go get github.com/bitly/go-simplejson
   - go get github.com/garyburd/redigo/redis
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
 before_install:
   - cp .netrc ~
   - chmod 600 .netrc
-script: npm run-script coveralls
 install:
   - export GOPATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace:$GOPATH"
   - export PATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace/bin:$PATH"
-
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out
+  $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
