--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ install:
   - export PATH="${TRAVIS_BUILD_DIR}/Godeps/_workspace/bin:$PATH"
 
 script:
-    - $HOME/gopath/bin/goveralls -repotoken $COVERALLS_TOKEN
+    - $GOPATH/bin/goveralls -repotoken $COVERALLS_TOKEN
