--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
 - go get golang.org/x/tools/cmd/cover
 - go get github.com/mattn/goveralls
 script:
+- go test -v -covermode=count -coverprofile=coverage.out
 - $HOME/gopath/bin/goveralls -repotoken $COVERALLS_TOKEN
 env:
   global:
