--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 before_install:
 - cp .netrc ~
 - chmod 600 .netrc
-- go get golang.org/x/tools/cmd/cover
+#- go get golang.org/x/tools/cmd/cover
 - go get github.com/mattn/goveralls
 - if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
