--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,12 @@ before_script:
 - go get github.com/bitly/go-simplejson
 - go get github.com/garyburd/redigo/redis
 - go get github.com/rafaeljusto/redigomock
+- go get gopkg.in/yaml.v2 
 before_install:
 - cp .netrc ~
 - chmod 600 .netrc
 - go get github.com/mattn/goveralls
-- if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
+#- if ! go get code.google.com/p/go.tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
 - go test ./Core/ -v -covermode=count -coverprofile=coverage.out
 - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
